@@ -3,5 +3,5 @@ compress.storage.mode.default <- function(x) x
 compress.storage.mode.double <- function(x){
   ok <- is.finite(x)
   #y <- as.integer(x)
-  if(all(x[ok]==trunc(x[ok]))) as.integer(x) else x
+  if(max(abs(x[ok]))>.Machine$integer.max || any (x[ok]!=trunc(x[ok]))) x else as.integer(x)
 }
